--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -64,7 +64,7 @@
                 </label>
             </div>
             <div class="col-10">
-                <TextEdit @bind-Text="@EditGroupBuyDto.EntryURL" />
+                <TextEdit @bind-Text="@EditGroupBuyDto.EntryURL" ReadOnly />
             </div>
         </div>
         <div class="row">
