Commit For PK-689

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
@@ -1,5 +1,5 @@
 ﻿@page "/GroupBuyManagement/GroupBuyList"
-
+@using Kooco.Pikachu.EnumValues;
 @using Kooco.Pikachu.Tenants
 @using Microsoft.Extensions.Configuration
 @using Volo.Abp.MultiTenancy
@@ -26,7 +26,7 @@
             <h3>@L["GroupBuyList"]</h3>
         </div>
         <div class="col-8 text-end">
-            <div class="d-inline-block">
+          @*   <div class="d-inline-block">
                 <div class="input-group">
                     <InputText class="form-control form-control-sm search-bar" @bind-Value="@SelectedAutoCompleteText" placeholder="@L["Search"]"></InputText>
                    
@@ -34,7 +34,7 @@
                         <i class="fa fa-search"></i>
                     </Button>
                 </div>
-            </div>
+            </div> *@
             <div class="custom-check-group me-1">
                 <input type="checkbox" class="form-check-input" checked="@IsAllSelected" @onchange="HandleSelectAllChange" />
                 <Label Class="form-label">@L["SelectAll"]</Label>
@@ -51,7 +51,189 @@
             </Button>
         </div>
     </div>
+    <Card>
 
+       
+            <CardBody>
+            <Div Class="input-group">
+                <InputText class="form-control"  @bind-Value="@Filters.FilterText" placeholder="@L["Search"]"></InputText>
+                <Button Color="Color.Primary" Clicked="ApplyFilters">
+                    <Icon Class="fas fa-search"></Icon>
+                </Button>
+            </Div>
+            <Button Color="Color.Link" Clicked="AdvanceFiltersVisibleChangedAsync">
+                @L["AdvanceFilters"]
+                @if (AdvanceFiltersVisible)
+                {
+                    <Icon Class="fa-chevron-up ms-1"></Icon>
+                }
+                else
+                {
+                    <Icon Class="fa-chevron-down ms-1"></Icon>
+                }
+            </Button>
+              @if (AdvanceFiltersVisible)
+            {
+                var columnSize = ColumnSize.Is2.OnQuadHD.Is3.OnFullHD.Is4.OnDesktop.Is6.OnTablet.Is12;
+                <Row VerticalGutter="10">
+               
+                    <Column ColumnSize="columnSize">
+                        <Label>@L["StartTime"]</Label>
+                        <DatePicker TValue="DateTime?" @bind-Date="Filters.StartTime" Size="Size.Small" />
+                    </Column>
+                    <Column ColumnSize="columnSize">
+                        <Label>@L["EndTime"]</Label>
+                        <DatePicker TValue="DateTime?" @bind-Date="Filters.EndTime" Size="Size.Small" />
+                    </Column>
+                    <Column ColumnSize="columnSize">
+                         <Label>@L["FreeShipping"]</Label>
+                        <Switch TValue="bool?" @bind-Checked="@Filters.FreeShipping"></Switch>
+              </Column>
+                    <Column ColumnSize="columnSize">
+                        <Label>@L["AllowShipToOuterIslands"]</Label>
+                        <Switch TValue="bool?" @bind-Checked="@Filters.AllowShipToOuterTaiwan"></Switch>
+                    </Column>
+                    <Column ColumnSize="columnSize">
+                        <Label>@L["IssueInvoice"]</Label>
+                        <Switch TValue="bool?" @bind-Checked="@Filters.IssueInvoice"></Switch>
+                    </Column>
+                    <Column ColumnSize="columnSize">
+                        <Label>@L["EnterprisePurchase"]</Label>
+                        <Switch TValue="bool?" @bind-Checked="@Filters.IsEnterprise"></Switch>
+                    </Column>
+                    <Column ColumnSize="columnSize">
+                        <Label>@L["InviteCode"]</Label>
+                        <Switch TValue="bool?" @bind-Checked="@Filters.IsEnterprise"></Switch>
+                    </Column>
+                    <Column ColumnSize="columnSize">
+                       
+                     <Label> @L["ShippingMethod"]</Label><br />
+             
+          
+                <Label class="form-label">@L["HomeDeliveryType"]</Label><br />
+               
+                 
+                    @foreach (string item in Enum.GetNames(typeof(DeliveryMethod)))
+                    {
+                        if (item == Enum.GetName(DeliveryMethod.PostOffice) ||
+                        item == Enum.GetName(DeliveryMethod.HomeDelivery) ||
+                        item == Enum.GetName(DeliveryMethod.BlackCat1) ||
+                        item == Enum.GetName(DeliveryMethod.BlackCatFreeze) ||
+                        item == Enum.GetName(DeliveryMethod.BlackCatFrozen) ||
+                        item == Enum.GetName(DeliveryMethod.TCatDeliveryNormal) ||
+                        item == Enum.GetName(DeliveryMethod.TCatDeliveryFreeze) ||
+                        item == Enum.GetName(DeliveryMethod.TCatDeliveryFrozen))
+                        {
+                            if (IsShippingMethodEnabled(item))
+                            {
+                                <label for="@item" class="form-label ">
+                                    <input type="checkbox"
+                                           class="form-check-input me-1"
+                                           id="@item"
+                                           disabled="@((Filters.ExcludeShippingMethod != null) && (Filters.ExcludeShippingMethod.Contains("DeliveredByStore"))&&item!="DeliveredByStore")"
+                                           checked="@((Filters.ExcludeShippingMethod != null) && (Filters.ExcludeShippingMethod.Contains(item)))"
+                                           @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
+                                    @L[item]
+                                </label>
+                            }
+                        }
+                    }
+                
+                <br />
+                <Label class="form-label">@L["ConvenienceStoreType"]</Label><br />
+             
+                  
+                    @foreach (string item in Enum.GetNames(typeof(DeliveryMethod)))
+                    {
+                        if (item == Enum.GetName(DeliveryMethod.FamilyMart1) ||
+                        item == Enum.GetName(DeliveryMethod.FamilyMartC2C) ||
+                        item == Enum.GetName(DeliveryMethod.SevenToElevenC2C) ||
+                        item == Enum.GetName(DeliveryMethod.SevenToEleven1) ||
+                        item == Enum.GetName(DeliveryMethod.SevenToElevenFrozen) ||
+                        item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenNormal) ||
+                        item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenFreeze) ||
+                        item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenFrozen))
+                        {
+                            if (IsShippingMethodEnabled(item))
+                            {
+                                <label for="@item" class="form-label ">
+                                    <input type="checkbox"
+                                           class="form-check-input me-1"
+                                           id="@item"
+                                           disabled="@((Filters.ExcludeShippingMethod != null) && (Filters.ExcludeShippingMethod.Contains("DeliveredByStore"))&&item!="DeliveredByStore")"
+                                           checked="@((Filters.ExcludeShippingMethod != null) && (Filters.ExcludeShippingMethod.Contains(item)))"
+                                           @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
+                                    @L[item]
+                                </label>
+                            }
+                        }
+                    }
+                
+                <br />
+                <Label class="form-label">@L["Self-PickupType"]</Label><br />
+                @foreach (string item in Enum.GetNames(typeof(DeliveryMethod)))
+                {
+                    if (item == Enum.GetName(DeliveryMethod.SelfPickup))
+                    {
+                        <label for="@item" class="form-label ">
+                            <input type="checkbox"
+                                   class="form-check-input me-1"
+                                   id="@item"
+                                   disabled="@((Filters.ExcludeShippingMethod != null) && (Filters.ExcludeShippingMethod.Contains("DeliveredByStore")) && item != "DeliveredByStore")"
+                                   checked="@((Filters.ExcludeShippingMethod != null) && (Filters.ExcludeShippingMethod.Contains(item)))"
+                                   @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
+                            @L[item]
+                        </label>
+                    }
+                }
+                <br />
+                <Label class="form-label">@L["DeliveredByStoreType"]</Label><br />
+                @foreach (string item in Enum.GetNames(typeof(DeliveryMethod)))
+                {
+                    if (item == Enum.GetName(DeliveryMethod.DeliveredByStore))
+                    {
+                        <label for="@item" class="form-label ">
+                            <input type="checkbox"
+                                   class="form-check-input me-1"
+                                   id="@item"
+                                   disabled="@((Filters.ExcludeShippingMethod != null) && (Filters.ExcludeShippingMethod.Contains("DeliveredByStore")) && item != "DeliveredByStore")"
+                                   checked="@((Filters.ExcludeShippingMethod != null) && (Filters.ExcludeShippingMethod.Contains(item)))"
+                                   @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
+                            @L[item]
+                        </label>
+                    }
+                }
+           
+                    </Column>
+                    <Column ColumnSize="columnSize">
+                        <Label> @L["PaymentMethod"] </Label>
+                       
+
+                         
+                            <Check TValue="bool" @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
+                            <Check TValue="bool" @bind-Checked="@BankTransfer">@L["BankTransfer"]</Check>
+                            <Check TValue="bool"
+                                   @bind-Checked="@IsCashOnDelivery">
+                                @L[PikachuResource.CashOnDelivery]
+                            </Check>
+                         
+                      
+                    </Column>
+                    <Column ColumnSize="ColumnSize.Is12.IsAuto.OnTablet" Class="d-flex align-items-end justify-content-center justify-content-sm-start">
+                        <Button Class="btn-sm btn-outline-primary me-1" Clicked="ResetFilters">
+                            <Icon Class="fa-undo"></Icon>
+                            @L["Reset"]
+                        </Button>
+                        <Button Class="btn-sm btn-primary" Clicked="ApplyFilters">
+                            <Icon Class="fa-filter"></Icon>
+                            @L["Filter"]
+                        </Button>
+                    </Column>
+                </Row>
+            }
+        </CardBody>
+        
+    </Card>
     <Card>
         <CardBody>
             <DataGrid TItem="GroupBuyDto"
